--- a/blog-dummyapi/src/components/PostCard/PostCard.module.css
+++ b/blog-dummyapi/src/components/PostCard/PostCard.module.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    color: white;
 }
 
 .postImage {
@@ -26,3 +26,9 @@
     border-radius: 4px;
     font-size: 14px;           
   }
+
+.postOwner {
+    font-size: 20px;
+    color: white;
+    margin-bottom: 10px;
+}
